# browser-vpn-runtime

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
browser_runtime/: __init__.py  config.py  container_entrypoint.py  playwright_mcp.py  playwright_mcp_router.py  playwright_profile.py
browser_vpn_runtime/: __init__.py  config.py  container_entrypoint.py  openvpn.py  openvpn_sidecar.py  playwright_mcp.py  playwright_mcp_router.py  playwright_profile.py  runtime.py  vpn_egress_healthcheck.py  vpn_gateway.py
deploy/k8s/: profile-writeback-job.yaml  runtime-capability.yaml
doc/design/: browser-runtime.md  browser-vpn-runtime.md
doc/superpowers/plans/: 2026-06-29-browser-vpn-runtime.md
docker/openvpn/: Dockerfile
docker/playwright/: Dockerfile
test/: test_config.py  test_container_entrypoint.py  test_kubernetes_manifest.py  test_openvpn_config.py  test_playwright_mcp.py  test_playwright_mcp_router.py  test_playwright_profile.py  test_runtime_contract.py  test_vpn_egress_healthcheck.py
