[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "browser-runtime"
version = "0.3.0"
description = "Reusable Playwright MCP browser, profile, and exact network-proxy routing runtime."
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.13,<3",
    "workflow-container-contract>=0.6,<0.7",
]

[project.optional-dependencies]
browser = [
    "aiohttp>=3.12,<4",
    "playwright-stealth>=2.0.0,<3",
]
test = [
    "PyYAML>=6,<7",
    "pytest>=9,<10",
]

[project.scripts]
browser-runtime-container-entrypoint = "browser_runtime.container_entrypoint:main"
browser-runtime-playwright-mcp-router = "browser_runtime.playwright_mcp_router:main"

[tool.setuptools.packages.find]
include = ["browser_runtime*"]

[tool.pytest.ini_options]
testpaths = ["test"]

[tool.black]
target-version = ["py314"]
line-length = 120

[tool.uv.sources]
workflow-container-contract = { path = "../workflow-container-contract", editable = true }
